# FON.net

./: .gitignore  .gitmodules  Directory.Build.props  FON.slnx  README.md  nuget.config
.github/workflows/: publish.yml
FON/: FON.csproj
FON.Native/: CMakeLists.txt  Cargo.toml  FON.Native.csproj
FON.Native.Platforms/FON.Native.linux-arm64/: FON.Native.linux-arm64.csproj
FON.Native.Platforms/FON.Native.linux-musl-arm64/: FON.Native.linux-musl-arm64.csproj
FON.Native.Platforms/FON.Native.linux-musl-x64/: FON.Native.linux-musl-x64.csproj
FON.Native.Platforms/FON.Native.linux-x64/: FON.Native.linux-x64.csproj
FON.Native.Platforms/FON.Native.osx-arm64/: FON.Native.osx-arm64.csproj
FON.Native.Platforms/FON.Native.osx-x64/: FON.Native.osx-x64.csproj
FON.Native.Platforms/FON.Native.win-arm64/: FON.Native.win-arm64.csproj
FON.Native.Platforms/FON.Native.win-x64/: FON.Native.win-x64.csproj
FON.Native.Runtime/: FON.Native.Runtime.csproj  NativeApi.cs  NativeBindings.cs  NativeLoader.cs
FON.Native/include/: fon.hpp  fon_export.h  fon_types.hpp
FON.Native/src/: deserialize.rs  error.rs  fon_export.cpp  lib.rs  raw_data.cpp  raw_data.rs  serialize.rs  types.rs
FON.Tests/FON.Native.Test/: FON.Native.Test.csproj  NativeAvailabilityTests.cs  NativeBufferTests.cs  NativeFileTests.cs  NativeNestedTests.cs  NativeSerializationTests.cs
FON.Tests/FON.Test/: FON.Test.csproj  NestedObjectTests.cs  UnitTest1.cs
FON/Acceleration/: FonAccelerator.cs
FON/Core/: Fon.cs  FonDeserialize.cs  FonSerialize.cs
FON/Types/: FonCollection.cs  FonDump.cs  FonObject.cs  RawData.cs
docs/superpowers/plans/: 2026-04-20-nested-objects.md  2026-06-20-rust-repo-split.md
(+9 files in other folders)
